--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="../css/network_service_monitoring.css">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VF5RD3YQ4P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VF5RD3YQ4P');
+</script>
+
 <body>
     <main>
         <section>
