--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elipticnet - Monitoring of Network Equipment in the Cloud</title>
     <meta name="description" content="Elipticnet is a scalable, easy-to-use platform to monitor the health and latency of your network equipment, with detailed graphs and alerts.">    <meta name="keywords" content="Elipticnet, network monitoring, cloud monitoring, network equipment, network latency, availability, email alerts, performance graphs">    <meta name="author" content="Elipticnet">
-    <link rel="stylesheet" href="../css/network_service_monitoring.css">
+    <link rel="stylesheet" href="css/network_service_monitoring.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
