--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="keywords"
         content="Elipticnet, network monitoring, cloud monitoring, network equipment, network latency, availability, email alerts, performance graphs">
     <meta name="author" content="Elipticnet">
-    <link rel="stylesheet" href="css/network_service_monitoring.css">
+    <link rel="stylesheet" href="../css/network_service_monitoring.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -36,14 +36,49 @@
 
 <body>
     <main>
-        <section>
-            <h1> Comming soon</h1>
-            <h2> A new way to monitor your network</h2>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
-                <path
-                    d="M320-160h320v-120q0-66-47-113t-113-47q-66 0-113 47t-47 113v120Zm160-360q66 0 113-47t47-113v-120H320v120q0 66 47 113t113 47ZM160-80v-80h80v-120q0-61 28.5-114.5T348-480q-51-32-79.5-85.5T240-680v-120h-80v-80h640v80h-80v120q0 61-28.5 114.5T612-480q51 32 79.5 85.5T720-280v120h80v80H160Z" />
-            </svg>
+        <section class="principal">
+            <div class="title">
+                <h1> Comming soon</h1>
+                <h2> A new way to monitor your network</h2>
+            </div>
+
+            <section class="register-form">
+                <div class="input-container">
+                    <input type="email" id="email" name="email" placeholder="your@email.com">
+                    <button>REGISTER
+                        <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
+                            fill="#5f6368">
+                            <path
+                                d="M144-192v-576l720 288-720 288Zm72-107 454-181-454-181v109l216 72-216 72v109Zm0 0v-362 362Z" />
+                        </svg>
+                    </button>
+                </div>
+            </section>
+
+            <section class="features">
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px"
+                        fill="#5f6368">
+                        <path
+                            d="M120-120v-77.33L186.67-264v144H120Zm163.33 0v-237.33L350-424v304h-66.67Zm163.34 0v-304l66.66 67.67V-120h-66.66ZM610-120v-236.33L676.67-423v303H610Zm163.33 0v-397.33L840-584v464h-66.67ZM120-346.33v-94.34l280-278.66 160 160L840-840v94.33L560-465 400-625 120-346.33Z" />
+                    </svg>
+                    Latency and link availability graphs
+                </p>
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px"
+                        fill="#5f6368">
+                        <path
+                            d="M240-253.33q-27 0-46.83-20.17-19.84-20.17-19.84-46.5v-453.33q0-27 19.84-46.84Q213-840 240-840h613.33q27 0 46.84 19.83Q920-800.33 920-773.33V-320q0 26.33-19.83 46.5-19.84 20.17-46.84 20.17H240Zm306.67-196L240-691.67V-320h613.33v-371.67L546.67-449.33Zm0-85.34L850-773.33H243.33l303.34 238.66ZM106.67-120q-27 0-46.84-20.17Q40-160.33 40-186.67V-726h66.67v539.33h700V-120h-700Zm746.66-572.67v-80.66H240v80.66-80.66h613.33v80.66Z" />
+                    </svg>
+                    Email alerts
+                </p>
+            </section>
+
         </section>
+
+
+
+
     </main>
 </body>
 
