--- a/index.html
+++ b/index.html
@@ -38,19 +38,16 @@
     <main>
         <section class="principal">
             <div class="title">
-                <h1> Comming soon</h1>
+                <h1>Elipticnet</h1>
                 <h2> A new way to monitor your network</h2>
+                <h3> Beta available</h3>
             </div>
 
             <section class="register-form">
                 <div class="input-container">
-                    <input type="email" id="email" name="email" placeholder="your@email.com">
-                    <button>REGISTER
-                        <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
-                            fill="#5f6368">
-                            <path
-                                d="M144-192v-576l720 288-720 288Zm72-107 454-181-454-181v109l216 72-216 72v109Zm0 0v-362 362Z" />
-                        </svg>
+                   <!-- <input type="email" id="email" name="email" placeholder="your@email.com">-->
+                    <button>BETA ACCESS
+                        <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368"><path d="M480-144v-72h264v-528H480v-72h264q29.7 0 50.85 21.15Q816-773.7 816-744v528q0 29.7-21.15 50.85Q773.7-144 744-144H480Zm-72-168-51-51 81-81H144v-72h294l-81-81 51-51 168 168-168 168Z"/></svg>
                     </button>
                 </div>
             </section>
