add img to title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="keywords"
         content="Elipticnet, network monitoring, cloud monitoring, network equipment, network latency, availability, email alerts, performance graphs">
     <meta name="author" content="Elipticnet">
-    <link rel="stylesheet" href="../css/network_service_monitoring.css">
+    <link rel="stylesheet" href="css/network_service_monitoring.css">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -38,7 +38,9 @@
     <main>
         <section class="principal">
             <div class="title">
-                <h1>Elipticnet</h1>
+                <h1>
+                    <img src="img/favicon/android-chrome-512x512.png">
+                    Elipticnet</h1>
                 <h2> A new way to monitor your network</h2>
                 <h3> Beta available</h3>
             </div>
