--- a/aplication/public/login.html
+++ b/aplication/public/login.html
@@ -256,6 +256,7 @@
     <script src="../js/show_alert.js"></script>
     <script src="../js/sesion/login.js"></script>
     <script src="../js/sesion/signup.js"></script>
+    <script src="../js/page_transition.js"></script>
 </body>
 
 </html>
