--- a/aplication/public/login.html
+++ b/aplication/public/login.html
@@ -17,8 +17,6 @@
     <meta name="msapplication-config" content="../img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2b2d42">
 
-
-
     <link rel="stylesheet" href="../css/palette.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/login.css" />
@@ -207,7 +205,7 @@
     <dialog id="forgot-password">
         <div class="dialog-header">
             <h1>
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
                     class="bi bi-person-lock" viewBox="0 0 16 16">
                     <path
                         d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m0 5.996V14H3s-1 0-1-1 1-4 6-4q.845.002 1.544.107a4.5 4.5 0 0 0-.803.918A11 11 0 0 0 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664zM9 13a1 1 0 0 1 1-1v-1a2 2 0 1 1 4 0v1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1zm3-3a1 1 0 0 0-1 1v1h2v-1a1 1 0 0 0-1-1" />
@@ -249,14 +247,11 @@
         </div>
     </dialog>
 
-
-
-
     <script src="../js/modal.js"></script>
     <script src="../js/show_alert.js"></script>
     <script src="../js/sesion/login.js"></script>
     <script src="../js/sesion/signup.js"></script>
-    <script src="../js/page_transition.js"></script>
+    <script src="../js/sesion/validate_email.js"></script>
 </body>
 
 </html>
