--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <section class="register-form">
                 <div class="input-container">
-                    <a href="aplication/public/login.html">BETA ACCESS
+                    <a href="aplication/public/login.php">BETA ACCESS
                         <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
                             fill="#5f6368">
                             <path
