--- a/aplication/public/resend_validation_code.html
+++ b/aplication/public/resend_validation_code.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Email validation</title>
 
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
