--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta name="msapplication-TileColor" content="#2b2d42">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2b2d42">
-
     <title>Elipticnet - Monitoring of Network Equipment in the Cloud</title>
     <meta name="description"
         content="Elipticnet is a scalable, easy-to-use platform to monitor the health and latency of your network equipment, with detailed graphs and alerts.">
@@ -39,14 +38,14 @@
 <body>
     <main>
         <section class="information">
-            <div class="title">
+            <section class="title">
                 <img width="130" height="130" src="img/logo.webp" alt="Elipticnet logo">
                 <h1>
                     Elipticnet
                 </h1>
                 <h2> Easy online monitoring</h2>
                 <h3> Beta available: <span> February, 2025 </span></h3>
-            </div>
+            </section>
             <section class="register-form">
                 <form class="email-form">
                     <label class="label" for="user-email">
@@ -58,30 +57,26 @@
                                 <path
                                     d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480v58q0 59-40.5 100.5T740-280q-35 0-66-15t-52-43q-29 29-65.5 43.5T480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480v58q0 26 17 44t43 18q26 0 43-18t17-44v-58q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93h200v80H480Zm0-280q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Z" />
                             </svg> Email</span>
-
                     </label>
                     <button id="sendEmailBtn">
-                        <div style="pointer-events: none;" class="text show">
+                        <div style="pointer-events: none;" class="textButton show">
                             Notify Me
                         </div>
                         <div class="loaderButton hide" style="pointer-events: none;">
                             <!-- Cambiado a hide para que esté oculto por defecto -->
-                            <svg class="spinner-circle"
-                            xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
-                            <path
-                                d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z" />
-                        </svg>
+                            <svg class="spinner-circle" xmlns="http://www.w3.org/2000/svg" height="24px"
+                                viewBox="0 -960 960 960" width="24px">
+                                <path
+                                    d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z" />
+                            </svg>
                         </div>
                     </button>
                 </form>
                 <div class="error-message" id="user-email-error"></div>
             </section>
             <section class="features">
-
                 <article class="card feature">
                     <h1>Ping Agent</h1>
-                    <small></small>
-
                     <p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-graph-up" viewBox="0 0 16 16">
@@ -128,8 +123,6 @@
                         Email alerts
                     </p>
                 </article>
-
-
             </section>
         </section>
     </main>
