Cambios en css general y muestra de alertas
Se cambia la forma en la que se muestran las alertas.
Se ajusta un poco el css general y se agregan observaciones para trabajar en desarrollo

--- a/aplication/public/resend_validation_code.html
+++ b/aplication/public/resend_validation_code.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="../css/palette.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/components/alert.css" />
     <link rel="stylesheet" href="../css/resend_validation_code.css" />
 </head>
 
@@ -67,7 +68,7 @@
     </main>
 
     <script src="../js/show_alert.js"></script>
-    <script src="../js/sesion/resend_validation_code.js"></script>
+    <script src="../js/components/alert.js"></script>
 
 </body>
 
