--- a/aplication/public/transport_validator.html
+++ b/aplication/public/transport_validator.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/palette.css" />
+    <link rel="stylesheet" href="../css/components/alert.css" />
     <link rel="stylesheet" href="../css/transport_validator.css" />
 
 </head>
@@ -44,7 +45,7 @@
     </main>
 
     <script src="../js/page_transition.js"></script>
-    <script src="../js/show_alert.js"></script>
+    <script src="../js/components/alert.js"></script>
     <script src="../js/API/transport_validator.js"></script>
 
 </body>
