--- a/aplication/public/restore_password.html
+++ b/aplication/public/restore_password.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="../css/palette.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/components/alert.css" />
     <link rel="stylesheet" href="../css/resend_validation_code.css" />
 </head>
 
@@ -85,7 +86,7 @@
     </main>
 
     <script src="../js/show_alert.js"></script>
-    <script src="../js/sesion/restore_password.js"></script>
+    <script src="../js/components/alert.js"></script>
 
 </body>
 
