Actualizacion de logo
Se cambia el tamaño del logo
se cambia el css que determina el tamaño del logo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <section class="information">
             <section class="title">
-                <img width="130" height="130" src="img/logo.webp" alt="Elipticnet logo">
+                <img width="130" height="130" src="img/logo_a.webp" alt="Elipticnet logo">
                 <h1>
                     Elipticnet
                 </h1>
