--- a/aplication/public/ping_agent_edit.html
+++ b/aplication/public/ping_agent_edit.html
@@ -23,11 +23,24 @@ define('MENU_ALLOWED', true);
     <meta name="msapplication-config" content="../img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2b2d42">
 
+    <!-- Styles -->
 
+    <!--Generics-->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/palette.css" />
+
+    <!--Components-->
     <link rel="stylesheet" href="../css/components/alert.css" />
+    <link rel="stylesheet" href="../css/components/loader.css" />
+    <link rel="stylesheet" href="../css/components/button.css" />
+    <link rel="stylesheet" href="../css/components/checkbox.css" />
+    <link rel="stylesheet" href="../css/components/input.css" />
+    <link rel="stylesheet" href="../css/components/tooltip.css" />
+
+    <!--Specific-->
     <link rel="stylesheet" href="../css/ping_agent.css" />
+
+
 
 </head>
 
@@ -40,8 +53,10 @@ define('MENU_ALLOWED', true);
             </svg>
         </button>
         <div class="nav-icon" id="nav-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16">
-                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001" />
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill"
+                viewBox="0 0 16 16">
+                <path
+                    d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001" />
             </svg>
         </div>
         <h1 id="nav-tittle"> Edit agent</h1>
@@ -54,8 +69,8 @@ define('MENU_ALLOWED', true);
     <main class="dashboard">
 
         <div id="load-curtain">
-            <svg class="spinner-circle" class="up-since" xmlns="http://www.w3.org/2000/svg"
-                height="24px" viewBox="0 -960 960 960" width="24px">
+            <svg class="spinner-circle" class="up-since" xmlns="http://www.w3.org/2000/svg" height="24px"
+                viewBox="0 -960 960 960" width="24px">
                 <path
                     d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z" />
             </svg>
@@ -64,8 +79,10 @@ define('MENU_ALLOWED', true);
         <section class="form-container card">
             <div class="tittle">
                 <h1>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16">
-                        <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-pen-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001" />
                     </svg>
                     Edit ping agent
                 </h1>
@@ -75,7 +92,7 @@ define('MENU_ALLOWED', true);
                 <div class="input-row-group">
 
                     <label class="label">
-                        <input tabindex="1" type="text" placeholder=" " class="input" id="host-name" name="host-name"
+                        <input tabindex="1" type="text" placeholder=" " class="input" id="hostName" name="hostName"
                             autocomplete="name" maxlength="20" required />
                         <span class="label__name">
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -84,11 +101,11 @@ define('MENU_ALLOWED', true);
                                     d="M300-720q-25 0-42.5 17.5T240-660q0 25 17.5 42.5T300-600q25 0 42.5-17.5T360-660q0-25-17.5-42.5T300-720Zm0 400q-25 0-42.5 17.5T240-260q0 25 17.5 42.5T300-200q25 0 42.5-17.5T360-260q0-25-17.5-42.5T300-320ZM160-840h640q17 0 28.5 11.5T840-800v280q0 17-11.5 28.5T800-480H160q-17 0-28.5-11.5T120-520v-280q0-17 11.5-28.5T160-840Zm40 80v200h560v-200H200Zm-40 320h640q17 0 28.5 11.5T840-400v280q0 17-11.5 28.5T800-80H160q-17 0-28.5-11.5T120-120v-280q0-17 11.5-28.5T160-440Zm40 80v200h560v-200H200Zm0-400v200-200Zm0 400v200-200Z" />
                             </svg>
                             Host name</span>
-                        <div class="error-message" id="host-name-error"></div>
+                        <div class="error-message" id="hostNameError"></div>
                     </label>
 
                     <label class="label">
-                        <input tabindex="2" type="text" placeholder=" " class="input" id="host-ip" name="host-ip"
+                        <input tabindex="2" type="text" placeholder=" " class="input" id="hostIp" name="hostIp"
                             autocomplete="ip" disabled />
                         <span class="label__name">
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -97,13 +114,13 @@ define('MENU_ALLOWED', true);
                                     d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm-40-82v-78q-33 0-56.5-23.5T360-320v-40L168-552q-3 18-5.5 36t-2.5 36q0 121 79.5 212T440-162Zm276-102q20-22 36-47.5t26.5-53q10.5-27.5 16-56.5t5.5-59q0-98-54.5-179T600-776v16q0 33-23.5 56.5T520-680h-80v80q0 17-11.5 28.5T400-560h-80v80h240q17 0 28.5 11.5T600-440v120h40q26 0 47 15.5t29 40.5Z" />
                             </svg>
                             IP</span>
-                        <div class="error-message" id="host-ip-error"></div>
+                        <div class="error-message" id="hostIp-error"></div>
                     </label>
                 </div>
 
                 <label class="label">
                     <textarea maxlength="200" tabindex="3" type="text" placeholder=" " class="input textarea"
-                        id="host-description" name="host-description" autocomplete="description" required></textarea>
+                        id="hostDescription" name="hostDescription" autocomplete="description" required></textarea>
                     <span class="label__name textarea">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                             fill="#e8eaed">
@@ -111,7 +128,7 @@ define('MENU_ALLOWED', true);
                                 d="M280-400q17 0 28.5-11.5T320-440q0-17-11.5-28.5T280-480q-17 0-28.5 11.5T240-440q0 17 11.5 28.5T280-400Zm0-120q17 0 28.5-11.5T320-560q0-17-11.5-28.5T280-600q-17 0-28.5 11.5T240-560q0 17 11.5 28.5T280-520Zm0-120q17 0 28.5-11.5T320-680q0-17-11.5-28.5T280-720q-17 0-28.5 11.5T240-680q0 17 11.5 28.5T280-640Zm120 240h200v-80H400v80Zm0-120h320v-80H400v80Zm0-120h320v-80H400v80ZM80-80v-720q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v480q0 33-23.5 56.5T800-240H240L80-80Zm126-240h594v-480H160v525l46-45Zm-46 0v-480 480Z" />
                         </svg>
                         Description</span>
-                    <div class="error-message" id="host-description-error"></div>
+                    <div class="error-message" id="hostDescription-error"></div>
                 </label>
 
             </div>
@@ -124,17 +141,18 @@ define('MENU_ALLOWED', true);
             <div class="additional_checks">
 
                 <span class="tooltip">
-                    <div id="threshold-box" class="threshold init">
+                    <div id="thresholdBox" class="threshold init">
                         <div class="checkbox-wrapper-13">
-                            <input id="threshold-checkbox" name="threshold" type="checkbox" onchange="toggleInput(this)">
-                            <label for="threshold-checkbox">Threshold</label>
+                            <input id="thresholdCheckbox" name="threshold" type="checkbox"
+                                onchange="toggleInput(this)">
+                            <label for="thresholdCheckbox">Threshold</label>
                         </div>
 
-                        <label class="label" id="threshold-input-wrapper" style="display: none;">
-                            <input tabindex="1" type="number" placeholder=" " class="input" id="threshold_value" name="threshold"
-                                autocomplete="name" max="999" />
+                        <label class="label" id="thresholdInputWrapper" style="display: none;">
+                            <input tabindex="1" type="number" placeholder=" " class="input" id="thresholdValue"
+                                name="threshold" autocomplete="name" max="999" />
                             <span class="label__name">100ms</span>
-                            <div class="error-message" id="threshold_value-error"></div>
+                            <div class="error-message" id="thresholdValueError"></div>
                         </label>
                     </div>
                     <span class="tooltip-text">If the latency is higher than the threshold we will send a warning.<br>
@@ -143,8 +161,8 @@ define('MENU_ALLOWED', true);
 
                 <script>
                     function toggleInput(checkbox) {
-                        const inputWrapper = document.getElementById('threshold-input-wrapper');
-                        const thresholdBox = document.getElementById('threshold-box');
+                        const inputWrapper = document.getElementById('thresholdInputWrapper');
+                        const thresholdBox = document.getElementById('thresholdBox');
 
                         if (checkbox.checked) {
                             thresholdBox.classList.remove('init');
@@ -164,7 +182,7 @@ define('MENU_ALLOWED', true);
                 <p>Alert transport</p>
             </div>
 
-            <section id="alert_transports_table" class="alert-transports">
+            <section id="alertTransportsTable" class="alert-transports">
 
                 <!-- <article class="transport">
                     <div class="checkbox-wrapper-13">
@@ -197,7 +215,7 @@ define('MENU_ALLOWED', true);
                         ADD TRANSPORT</a>
                 </div>
             </section>
-            <button id="update_agent" class="create-agent">
+            <button id="updateAgent" class="create-agent">
 
                 <div class="text show">
                     UPDATE
@@ -210,20 +228,17 @@ define('MENU_ALLOWED', true);
                             d="M320-160h320v-120q0-66-47-113t-113-47q-66 0-113 47t-47 113v120Zm160-360q66 0 113-47t47-113v-120H320v120q0 66 47 113t113 47ZM160-80v-80h80v-120q0-61 28.5-114.5T348-480q-51-32-79.5-85.5T240-680v-120h-80v-80h640v80h-80v120q0 61-28.5 114.5T612-480q51 32 79.5 85.5T720-280v120h80v80H160Z" />
                     </svg>
                 </div>
-
-
             </button>
         </section>
     </main>
 
-    <script src="../js/modal.js"></script>
-    <script src="../js/API/get_transports.js"></script>
-    <script src="../js/functions/get_url_param_id.js"></script>
-    <script src="../js/functions/remove_load_curtain.js"></script>
-    <script src="../js/API/ping_agent_edit_get_data.js"></script>
-    <script src="../js/API/ping_agent_edit_update_data.js"></script>
-    <script src="../js/page_transition.js"></script>
     <script src="../js/components/alert.js"></script>
+    <script src="../js/components/dialog.js"></script>
+    <script src="../js/page_transition.js"></script>
+    <script src="../js/API/get_transports.js"></script>
+    <script type="module" src="../js/API/ping_agent_edit_get_data.js"></script>
+    <script type="module" src="../js/API/ping_agent_edit_update_data.js"></script>
+
 </body>
 
 </html>
